# respeaker_ros

./: CMakeLists.txt  package.xml
launch/: respeaker.launch
scripts/: respeaker_node.py  speech_to_text.py
scripts/host/: host_kws.py  updater-script
